--- a/src/flight/config.yaml
+++ b/src/flight/config.yaml
@@ -1,6 +1,6 @@
 db:
-  url: postgresql://program:test@localhost:5432/flights?sslmode=disable
+  url: postgresql://program:test@db:5432/flights?sslmode=disable
 
 server:
-  host: localhost
-  port: 8080
+  host: 0.0.0.0
+  port: 8060
